bootstrap/argocd/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=true
  name: argocd
spec: {}
status: {}
